@@ -1,0 +1,1 @@
+# This file is loaded by rails/world.rb
