@@ -1,3 +1,6 @@
+* Support for cucumber [jgarber, seancribbs]
+
+  
 *1.1.0 [STI, belongs_to] (February 14, 2009)
 
 * STI is better supported for inserting, naming and finding records [aiwilliams]
